--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     position: relative;
+    background-color: #ececec9c;
 }
 
 .hide {
@@ -19,7 +20,7 @@ body {
     z-index: 10;
     padding: 0px 5%;
     background-color: #557dde;
-    box-shadow: -1px 20px 12px #ffffff;
+    box-shadow: 0px 1px 20px 5px #557dde70;
     display: flex;
     justify-content: space-between;
     align-content: center;
@@ -54,34 +55,32 @@ body {
     outline: 0px;
     border: 0;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .header {
     line-height: 70px;
     text-align: center;
     width: 40%;
-    background-color: #ffffff;
+    background-color: #b7cbfd52;
     border-radius: 5px 5px 0px 0px;
 } 
 
 .header h1 {
     font-weight: 100;
-    color: #364aa2;
+    color: #ffffff;
     font-size: 27px;
 }
 
 .input-section {
-    width: 100%;
-    position: absolute;
     padding: 130px 0px 80px 0px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     
-    background-color: white;
+    background-color: #f3f3f3;
     z-index: 5;
-    box-shadow: 0px 0px 40px 8px #ffffffd9;
 }
 
 .input-container {
@@ -93,7 +92,6 @@ body {
     box-shadow: 0px 0px 15px 0px #00000024;
     border-radius: 10px;
     background-color: white;
-
 }
 
 .input-container input,
@@ -106,7 +104,7 @@ body {
 }
 
 .note-head {
-    height: 30px;
+    min-height: 45px;
     font-size: 20px;
     font-weight: bold;
     color: #484848;
@@ -156,10 +154,6 @@ body {
     -webkit-appearance: none;
 }
 
-.cats:hover {
-    font-weight: 800;
-}
-
 .add-button {
     bottom: 0px;
     left: 10px;
@@ -191,7 +185,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    padding: 250px 5% 7% 7%;
+    padding: 0px 5% 7% 7%;
 }
 
 .note {
