--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,12 @@ body {
 
 .time h2,
 .sort h2 {
-    color: white;  
+    color: white;
     font-weight: 100;
     letter-spacing: 1px;
     font-size: 15px;
 }
+
 .sort {
     display: flex;
     flex-wrap: nowrap;
@@ -57,6 +58,9 @@ body {
     border: 0;
     font-size: 15px;
     cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    margin-left: 10px;
 }
 
 .header {
@@ -65,7 +69,7 @@ body {
     width: 40%;
     background-color: #b7cbfd52;
     border-radius: 5px 5px 0px 0px;
-} 
+}
 
 .header h1 {
     font-weight: 100;
@@ -74,12 +78,12 @@ body {
 }
 
 .input-section {
-    padding: 130px  7% 80px 7%;
+    padding: 130px 7% 80px 7%;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    
+
     background-color: #f3f3f3;
     z-index: 5;
 }
@@ -181,6 +185,7 @@ body {
 }
 
 /* Created Note Style Sheet */
+
 .note-section {
     display: flex;
     flex-wrap: wrap;
@@ -230,9 +235,11 @@ body {
 .note > i:first-of-type {
     right: 40px;
 }
+
 .note > i:first-of-type:hover {
     color: #9de035;
 }
+
 .note > i:first-of-type::after {
     content: "";
     position: absolute;
@@ -247,15 +254,17 @@ body {
 .note > i:last-of-type {
     right: 0px;
 }
+
 .note > i:last-of-type:hover {
     color: #c31717;
 }
 
 /* Section Edit */
+
 .edit-section {
     position: fixed;
     top: 0px;
-    left: 0px;    
+    left: 0px;
     height: 100vh;
     width: 100vw;
     background-color: #0f121f8a;
